# godot-bulletml

./: .editorconfig  Cargo.toml  NOTICE.md  README.md  build.rs  post_build.rs
project/: .editorconfig  .gitignore  icon.svg.import  project.godot
project/addons/bulletml/: BulletML.gdextension  BulletMLCodeEdit.gd  Editor.gd  Editor.tscn  InspectorBulletMLPreview.gd  InspectorBulletMLPreview.tscn  Preview.tscn  bulletml-logo-16.png.import  bulletml.gd  import.gd  inspector.gd  plugin.cfg
project/addons/bulletml/inspector/: arrow-path.svg.import  bullet.gd  bullet.tscn  grabber.gd  main.gd  play.svg.import  preview.gd  preview.tscn
project/addons/godot-plugin-refresher/: plugin_refresher.gd  plugin_refresher.tscn  plugin_refresher_plugin.gd
project/demo/: Bullet.gd  Bullet.tscn  Demo.gd  Demo.tscn
project/demo/examples/: [Daiouzyou]_hibachi_4.xml  hibachi.xml  sample.bulletml  sample.xml  yaml.yaml
src/: bullet.rs  bulletml.rs  bulletml_bullet.rs  bulletml_canvas.rs  bulletml_player.rs  bulletml_resource.rs  canvas.rs  lib.rs  player.rs  plugin.rs  pool.rs  resource.rs  style.rs
